# TeRa

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.mac  ComboBox.h  README - Copy.md  README.md  TERA_kasutusjuhend.docx  config.qrc  macos-manual.md  prepare_osx_build_environment.sh  qdigidoc-tera-gui.1.cmake  qdigidoc-tera.1.cmake  qdigidoc-tera.appdata.xml  qdigidoc-tera.desktop  qesteidutil-tera.entitlements  qestidtera.entitlements  tera.en-US.wxl  tera.et-EE.wxl  tera.wxs  xxx.cpp
cmake/modules/: FindPCSCLite.cmake  TeRaVersionInfo.cmake
common/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ComboBox.cpp  ComboBox.h  Common.cpp  Common.h  Configuration.cpp  PinDialog.cpp  PinDialog.h  PinDialogInterface.h  QCNG.cpp  QCNG.h  QPCSC.cpp  QPCSC.h  QPCSC_p.h  QPKCS11.cpp  QPKCS11.h  QSmartCard.cpp  QSmartCard.h  QSmartCard_p.h  QWin.cpp  QWin.h  Settings.h  SslCertificate.cpp  SslCertificate.h  TokenData.cpp  TokenData.h
debian/: changelog  control
images/: images.qrc
mac/: libzip_static.py
mac/Resources/: Icon.icns
mac/Resources/ru.lproj/: InfoPlist.strings
poc/: FileListDialog.ui  IDCardSelectionDialog.ui  MainWindow.ui  SettingsDialog.ui  config.cpp  config.h  disk_crawler.cpp  disk_crawler.h  files_window.cpp  files_window.h  gui_timestamper_processor.cpp  gui_timestamper_processor.h  id_card_select_dialog.cpp  id_card_select_dialog.h  logging.cpp  logging.h  main_window.cpp  main_window.h  openssl_utils.cpp  openssl_utils.h  settings_window.cpp  settings_window.h  teracmdtool.rc  teragui.rc  terapoc.cpp  terapoc.h  timestamper.cpp  timestamper.h  utils.cpp  utils.h  utils_mac.h  utils_mac.mm  xxx.cpp
res/: config.qrc  tera.ini  tera.qrc
src/: version.h
src/client/about/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui
src/cmdtool/: cmdline_timestamper_processor.cpp  cmdline_timestamper_processor.h
src/common/: Bdoc10Handler.cpp  Bdoc10Handler.h  HttpsIDCardAuthentication.cpp  HttpsIDCardAuthentication.h
src/libdigidoc/: Configuration.cpp  Configuration.h
translations/: en.qm  en.ts  et.qm  et.ts  qtbase_et.ts  qtbase_ru.ts  ru.qm  ru.ts  tr.qrc
